--- a/css/pantheonGroupManager.css
+++ b/css/pantheonGroupManager.css
@@ -1,10 +1,10 @@
 .mainContainer { 
 	background: url(../assets/bg.jpg) top right no-repeat;
-	background-attachment: fixed;
+	background-size: cover;
 }
 .mainContainer.corps { 
 	background: url(../assets/bgCorps.jpg) top right no-repeat;
-	background-attachment: fixed;
+	background-size: cover;
 }
 .cardholder {
 	opacity: 0.9;
@@ -33,4 +33,19 @@ material-sidenav {
 }
 .material-button-inner:hover {
 	background-color: gray;
+}
+.joinBtn button {
+	border: 2px solid;
+	opacity: 0.7;
+}
+.joinBtn button:hover {
+	opacity: 1;
+	background: none !important;
+}
+.joinBtn material-button:hover {
+	opacity: 1;
+	background: none !important;
+}
+.joinBtn material-button{
+	margin: 5px;
 }
