--- a/css/custom.css
+++ b/css/custom.css
@@ -197,7 +197,10 @@ core-icon-button:focus{
   width: 95%;
   max-width: none;
 }
-
+.stream .overflowMenu {
+  width: initial;
+  right: 4%;
+}
 #addGroupCardButton {
   transition: top ease-in-out 0.3s;
   transition: background-color ease-in-out 0.3s;
