--- a/partials/corps.tmpl.html
+++ b/partials/corps.tmpl.html
@@ -1,97 +1,128 @@
 <div id="applicationContainer" layout="horizontal" layout-fill>
 
-      <material-sidenav class="material-sidenav-left material-whiteframe-z2" component-id="left" layout="vertical">
-        <material-toolbar class="navToolbar">
-          <h1 id="navMenuTitle" class="material-toolbar-tools">Society Pro</h1>
+      <md-sidenav class="md-sidenav-left md-whiteframe-z2" component-id="left" layout="vertical">
+        <md-toolbar class="sidenavToolbar">
+              <div class="md-toolbar-tools sidenavToolbar" ng-click="toggleMenu()">
+                <div style="height:48px;margin:0px;">
+                  <div id="menu-drawer-button" class="menu-icon"> 
+                    <img class="toggleImage" src="material-icons/icons/system_icons/navigation/res/1x_web/ic_menu_24dp.png">
+                  </div>
+                  <div class="toolbarTitle">Society Pro</div>
+                </div>  
+              </div>        
+            </md-toolbar>
           <span flex></span>
-        </material-toolbar>
-        <material-content>
-          
-        </material-content>
-        <span flex></span>
-        <div class="appVersion">
-          <p>Group Manager version: 0.1.2</p>
-        </div>
-      </material-sidenav>
-
-      <div layout="vertical" layout-fill class="mainContainer corps">
-        <material-toolbar scroll-shrink>
-          <div layout="horizontal">
-            <div class="material-toolbar-tools">
-              <div class="menu-icon" ng-click="toggleMenu()">
-                <img src="material-icons/icons/system_icons/navigation/res/1x_web/ic_menu_wht_24dp.png">
-              </div>
-              <h2 id="toolTitle">Corps and Coalitions</h2>
-            </div>
-            <div id="viewButtons" layout="horizontal" layout-align="end">
-              <material-button id="streamButton" class="viewButton material-button-icon" ng-class="{active: listView === 'stream', inactive: listView === 'quilt'}" ng-click="streamView()">
-                <img src="material-icons/icons/system_icons/action/res/1x_web/ic_view_stream_wht_24dp.png">
-              </material-button>
-              <material-button id="quiltButton" class="viewButton material-button-icon" ng-class="{active: listView === 'quilt', inactive: listView === 'stream'}" ng-click="quiltView()">
-                <img src="material-icons/icons/system_icons/action/res/1x_web/ic_view_quilt_wht_24dp.png">
-              </material-button>
-            </div>
+          <div layout="vertical" layout-align="end center" style="margin:20px;"> 
+            
+            v0.1.5
+            
           </div>
-        </material-toolbar>
-        <div class="content-padding" layout="vertical" flex>
+      </md-sidenav>
 
-          <material-card id="quickAddBox">
-            <form name="quickAddForm" style="padding-left:20px;">
-            <!--
-              <material-input-group>
-                <label for="quickAddTitle">Add a group...</label>
-              </material-input-group>
-            -->
-              <material-input 
-              name="quickAddTitle" 
-              id="quickAddTitle" 
-              type="text" 
-              size="45" 
-              ng-model="newGroupTitle"
-              placeholder="Add a Corp..."
-              flex ng-click="inputClick = true"></material-input>
-              <div id="quickAddAdditional" ng-show="inputClick">
-                <div class="custom-dropdown small">
+      <div layout="vertical" layout-fill class="mainContainer">
+        <md-toolbar class="pantheonToolbar" ng-class="{noShadow:isTmpl}">
+      <div layout="horizontal">
+        <div class="md-toolbar-tools" ng-click="toggleMenu()">
+          <div style="height:48px;margin:0px;">
+            <div id="menu-drawer-button" class="menu-icon"> 
+              <img class="toggleImage" src="material-icons/icons/system_icons/navigation/res/1x_web/ic_menu_wht_24dp.png">
+            </div>
+            <div class="toolbarTitle">Corps and Coalitions</div>
+          </div>  
+        </div>
+        <span flex></span>
+        <div id="viewButtons" layout="horizontal">
+          <!--<div id='cssmenu' ng-if="checkView()">
+            <ul>
+              <li class='active has-sub last' id="filterButton">
+                <material-button class="viewButton clicker material-button-icon" title="Filter Polls">
+                  <material-icon icon="material-icons/icons/system_icons/content/res/1x_web/ic_filter_wht_24dp.png"></material-icon>
+                </material-button>
+                </a>
+                <ul>
+                  <li ng-repeat="filter in menu.filters" ng-class="{last:$last}"> <a id="filterButton" class="menu-item menu-sub-item" ng-class="{active: menu.isFilterSelected(filter)}" ng-click="selectFilter(filter); $event.stopImmediatePropogation()"> <span class="color-chip" style='background-color: {{filter.color}};'></span> <span class="color-tag" ng-bind="filter.filter"></span>
+                    <div class="clearBoth"></div>
+                    <material-ripple initial-opactiy="0.4" opacity-decay-velocity="1.75"></material-ripple>
+                    </a> </li>
+                </ul>
+              </li>
+            </ul>
+          </div>-->
+          <md-button id="streamButton" class="viewButton" ng-click="streamView()" ng-class="{active: listView === 'stream', inactive: listView === 'quilt'}" aria-label="Show as Stream">
+            <md-icon style="width: 24px; height: 24px;" icon="material-icons/icons/system_icons/action/res/1x_web/ic_view_stream_wht_24dp.png"></md-icon>
+          </md-button>
+          <md-button id="quiltButton" class="viewButton" ng-click="quiltView()" ng-class="{active: listView === 'quilt', inactive: listView === 'stream'}" aria-label="Show as Quilt">
+            <md-icon style="width: 24px; height: 24px;" icon="material-icons/icons/system_icons/action/res/1x_web/ic_view_quilt_wht_24dp.png"></md-icon>
+          </md-button>
+        </div>
+      </div>
+    </md-toolbar>
+        <md-content layout="vertical" flex>
+          <div class="container">
+            <md-card id="quickAddBox" class="quickAddBox" ng-show="listView == 'quilt'">
+              <form name="quickAddForm" class="quickAddForm">
+                <!--<md-input-group>
+                  <md-input ng-class="{bold:newItem}" name="quickAddTitle" placeholder="{{addTitlePlaceholder}}" id="quickAddTitle" type="text" size="45" ng-model="newTitle" flex ng-click="newItem = true">
+                </md-input-group>
+                <md-input-group>  
+                  <md-input  name="quickAddDescription" placeholder="{{addDescriptionPlaceholder}}" id="quickAddDescription" type="text" size="45" ng-model="newDescription" flex ng-show="newItem" click-anywhere-but-here="close()" is-active="isDropdownOpen()">
+                </md-input-group>-->
+                <md-input-group>
+                  <md-input class="bold"
+                      ng-class="{hideQuickAddBox:!inputClick}"
+                      name="quickAddTitle" 
+                      id="quickAddTitle" 
+                      type="text" 
+                      size="45" 
+                      ng-model="newGroupTitle"
+                      placeholder="Add a Corp..."
+                      flex ng-click="inputClick = true"></md-input>
+                </md-input-group>
+                <div class="custom-dropdown small groupType" ng-show="inputClick">
                   <select ng-model="newGroupType">
-                    <option ng-repeat="groupType in groupTypes" value="{{groupType}}">{{groupType}}</option>
+                    <option value="">-- Type --</option>
+                    <option ng-repeat="groupType in groupTypes track by $index" value="{{groupType}}">{{groupType}}</option>
                   </select>
                 </div>
-                <material-button id="quickAddButton" class="material-button-colored" ng-show="newGroupTitle" ng-click="newGroup()">
-                  SAVE
-                </material-button>
-              </div>
-            </form>
-          </material-card>
+              </form>
+
+                <div id="quickAddAdditional" ng-show="inputClick" layout="horizontal" layout-align="end">
+                  <md-button id="quickAddButton" class="quickButton md-primary" ng-show="newGroupTitle" ng-click="newGroup()">
+                    SAVE
+                  </md-button>
+                </div>
+              <div class="clearBoth"></div>
+            </md-card>
           <!-- Quick Add Box original 
           <sopro-titlebar>
               <div id="quickAddAdditional" ng-show="quickAddForm.$dirty">
               <select ng-model="newGroupType" ng-options="groupType for groupType in groupTypes"></select>
-              <material-button id="quickAddButton" class="material-button-colored" ng-show="quickAddForm.$dirty" ng-click="newGroup()">
+              <md-button id="quickAddButton" class="md-button-colored" ng-show="quickAddForm.$dirty" ng-click="newGroup()">
                 SAVE
-              </material-button>
+              </md-button>
             </div>
           </sopro-titlebar>
           end Quick Add Box -->
 
           <!-- 
-          <material-content 
+          <md-content 
           ng-class="{'groupListsContainer':true, 'quiltView':listView === 'quilt', 'streamView':listView === 'stream'}" 
           scroll-y flex>
           -->
-          <material-content id="contentArea" flex>
-            <div id= "myGroupsContainer" ng-if="listContains === 'myGroups'" masonry>
-              <!-- material-card for groups -->  
+          <div id="contentArea" flex>
+            <div id= "myGroupsContainer" masonry="{ transitionDuration: 0 }" reload-on-show load-images="false" ng-show="reloadMasonry" ng-if="listView == 'quilt'">
+              <!-- md-card for groups -->  
               <div class="cardholder masonry-brick" 
-              ng-repeat="group in myGroups"
+              ng-repeat="group in myGroups track by $index"
               ng-mouseleave="group.overflow = false;"
               ng-class="{quilt:listView == 'quilt', stream:listView == 'stream'}"
               >
-                <material-card 
-                class="groupCard"
-                ng-class="{alliance:group.type =='coalition'}" 
+                <md-card 
+                class="groupCard corpCard" 
+                ng-class="{alliance:group.type =='coalition'}"
                 layout="vertical"
                 ng-click="dialog($event, group)">
-                  <div>
+                  <div flex layout="vertical">
                     <div layout="horizontal" layout-align="start center">
                       <h3 flex>{{group.name}}</h3>
                       <img ng-if="group.type!='coalition'" ng-src="{{'assets/'+group.ticker+'.png'}}" height="25" width="25">
@@ -103,7 +134,6 @@
                       <img ng-if="group.type!='coalition'" ng-src="material-icons/icons/system_icons/social/res/1x_web/ic_group_18dp.png"> 
                       <span class="groupMemberLength"> {{group.members}} </span>
                     </div>
-                  </div>
                   <div class="lightDetails options">
                     <p>Ticker: {{group.ticker}}</p>
                     <p ng-show="group.ceo">CEO: {{group.ceo}}</p>
@@ -112,36 +142,86 @@
                     <p ng-show="group.execCorp">Exec. Corp: {{group.execCorp}}</p>
                     <p ng-show="group.nCorps"># Corps: {{group.nCorps}}</p>
                   </div>
-                  <div>
                   </div>
-                  <div class="cardMenuBar" 
+
+                  
+                <div class="cardMenuBar" 
                   layout="horizontal" 
                   layout-align="end center">
-                    <material-button 
-                    class="overflowMenuButton material-button-icon" 
+                    <md-button 
+                    class="overflowMenuButton md-button-icon" 
                     ng-click="overflowToggle(group); $event.stopPropagation()"
                     layout="horizontal"
                     layout-align="center center" 
-                    >
-                      <img 
-                      class="overflowMenuIcon"
-                      ng-src="material-icons/icons/system_icons/action/res/1x_web/ic_drawer_wht_18dp.png">
-                    </material-button>
+                    ><img class="overflowMenuIcon" ng-if="group.type=='coalition'" ng-src="material-icons/icons/system_icons/action/res/1x_web/ic_drawer_wht_24dp.png">
+                      <img class="overflowMenuIcon" ng-if="group.type!='coalition'" ng-src="material-icons/icons/system_icons/action/res/1x_web/ic_drawer_24dp.png">
+                    </md-button>
                   </div>
-                  <material-card class="overflowMenu animate-show" ng-show="group.overflow">
-                  <a block class="overflowDuplicate"
-                  ng-click="duplicateGroup(group)">Duplicate Group</a>
-                  <a block class="overflowDelete"
-                  ng-click="deleteGroup(group)">Delete Group</a>
-                </material-card>  
-                </material-card>  
+                  <md-card class="overflowMenu animate-show" ng-show="group.overflow">
+                    <a block class="overflowDuplicate"
+                    ng-click="duplicateGroup(group,$event)">Duplicate Group</a>
+                    <a block class="overflowDelete"
+                    ng-click="deleteGroup(group)">Delete Group</a>
+                  </md-card>
+
+                </md-card>
               </div>
-            </div>       
-          </material-content>
+            </div>
+            <div class="streamTitles" ng-show="listView == 'stream' && myGroups.length != 0">
+              <div layout="horizontal" flex="100">
+                <div flex="30" style="padding-left:16px;">Name</div>
+                <div flex="15" style="padding-left:16px;">Type</div>
+                <div flex="15" style="padding-left:16px;">Ticker</div>
+                <div flex="10" style="padding-left:16px;">Avg. Sec.</div>
+                <div flex="10" style="padding-left:16px;">Members</div>
+              </div>
+            </div>
+            <div class="streamCardholder" ng-repeat="group in myGroups track by $index" ng-mouseleave="group.menubar = false;" ng-if="listView == 'stream'">
+              <md-card class="streamMainCard corpCard" ng-class="{firstCard: $first,alliance:group.type =='coalition'}" layout="horizontal">
+                <div class="streamCardContentContainer" layout="horizontal" layout-align="start center">
+                  <div class="streamPollLine" flex="30" ng-click="dialog($event, group)">
+                    <img ng-if="group.type!='coalition'" ng-src="{{'assets/'+group.ticker+'.png'}}" height="25" width="25">
+                      <img ng-if="group.type=='coalition'" ng-src="{{'assets/'+group.img+'.png'}}" height="25" width="25">
+                    <b>{{group.name}}</b>
+                  </div>
+                  <div class="streamPollLine" ng-class="{gray:group.type != 'coalition',softGray:group.type == 'coalition'}" flex="15" ng-click="dialog($event, group)">
+                    <em>{{group.type}}</em>
+                  </div>
+                  <div class="streamPollLine" ng-class="{gray:group.type != 'coalition',softGray:group.type == 'coalition'}" flex="15" ng-click="dialog($event, group)">
+                    <em>{{group.ticker}}</em>
+                  </div>
+                  <div class="streamPollLine" ng-class="{gray:group.type != 'coalition',softGray:group.type == 'coalition'}" flex="10" ng-click="dialog($event, group)">
+                    <em>{{group.avgSec}}</em>
+                  </div>
+                  <div class="streamPollLine" ng-class="{gray:group.type != 'coalition',softGray:group.type == 'coalition'}" flex="10" ng-click="dialog($event, group)">
+                    <img ng-if="group.type=='coalition'" ng-src="material-icons/icons/system_icons/social/res/1x_web/ic_group_wht_18dp.png">
+                    <img ng-if="group.type!='coalition'" ng-src="material-icons/icons/system_icons/social/res/1x_web/ic_group_18dp.png">
+                      <span class="groupMemberLength"> {{group.members}} </span>
+                  </div>
+                  <div class="streamCardMenuBar" flex="25" layout="horizontal" layout-align="end center">
+                    <md-button class="md-button-icon overflowMenuButton streamOverflowMenuButton" ng-click="group.menubar = !group.menubar" layout="vertical" layout-align="end end" title="Overflow Menu">
+                      <img class="overflowMenuIcon" ng-if="group.type=='coalition'" ng-src="material-icons/icons/system_icons/action/res/1x_web/ic_drawer_wht_24dp.png">
+                      <img class="overflowMenuIcon" ng-if="group.type!='coalition'" ng-src="material-icons/icons/system_icons/action/res/1x_web/ic_drawer_24dp.png">
+                    </md-button>
+                  </div>
+                </div>
+              </md-card>
+              <md-card id="overflowMenu-{{$index}}" class="overflowMenu animate-show" ng-show="group.menubar"> 
+                    <a class="destroyAction" title="Duplicate Group" ng-click="duplicateGroup(group,$event)">Duplicate Group</a>
+                    <a class="destroyAction" ng-really-message="Are you sure you want to delete this Group?" title="Delete Group" ng-really-click="deleteGroup(group)">Delete Group</a>
+                    <!--<a title="Role Settings">Role Settings</a>-->
+                  </md-card>
+            </div>
+          </div>
         </div>
+        <md-button class="md-fab md-button-fab-bottom-right md-primary quickFabButton"  aria-label="New Peer" ng-click="newGroupFromScratch()" >
+        
+            <md-icon icon="material-icons/icons/system_icons/content/res/1x_web/ic_add_24dp.png" style="width: 24px; height: 24px;"></md-icon>
+            <md-tooltip>
+              New Corp
+            </md-tooltip>
+        </md-button>
+        </md-content>
       </div>
 
     </div>
-    <script>
-      
-    </script>
